# atmosphere-python-sdk

./: .gitignore  .pylintrc  Dockerfile  Dockerfile-activity-base-test  Dockerfile-transformer-base-test  LICENSE  MANIFEST.in  README.md  changelog.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cicd.yml
atmosphere/: MANIFEST.in  VERSION  __init__.py  _version.py  dev-requirements.txt  pytest.ini
atmosphere/activity/: README.md  __init__.py  base_class.py  base_config.py  dev_logging.yaml  logger_classes.py  logger_setup.py  module_importer.py  prod_logging.yaml  version.py
atmosphere/activity/api/: endpoints.py
atmosphere/activity/mocker/: main_mocker.py  mocker_config.py
atmosphere/atmospherex/: __init__.py  atmospherex_api.py  atmospherex_auth.py
atmosphere/custom_activity/: README.md  __init__.py  base_class.py  dev_logging.yaml  logger_setup.py  prod_logging.yaml  pydantic_models.py  server.py
atmosphere/custom_activity/api/: endpoints.py
atmosphere/custom_activity/mocker/: mocker.py  mocker_config.py
atmosphere/method/: README.md  __init__.py  pydantic_models.py
atmosphere/scripts/: format.sh  lint.sh  test.sh
atmosphere/tests/activity/: activity_for_tests.py  conftest.py  test_mocker.py  test_server.py  test_version.py
atmosphere/tests/transformer/: test_input_transformer_api.py  test_input_transformer_class.py  utils.py
atmosphere/transformer/: README.md  base_transformer.py  input_transformer.py  output_transformer.py  pydantic_models.py
atmospherex_activity_base/: MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.py  test-script.sh
atmospherex_activity_base/atmospherex_activity_base/: __init__.py  base_class.py  dev_logging.yaml  module_importer.py  prod_logging.yaml  pydantic_models.py  server.py  version.py
atmospherex_activity_base/tests/: activity_for_tests.py  conftest.py  test_mocker.py  test_server.py  test_version.py
atmospherex_transformer_base/: README.md  pytest.ini  requirements.txt  setup.py  test-script.sh
atmospherex_transformer_base/atmospherex_transformer_base/: base_transformer.py  input_transformer.py  output_transformer.py
atmospherex_transformer_base/tests/: test_input_transformer_api.py  test_input_transformer_class.py  test_output_transformer_api.py  test_output_transformer_class.py  test_transformer_api.py  test_transformer_class.py  utils.py
scripts/: format.ps1  format.sh  lint.ps1  lint.sh  test.ps1
tests/activity/: activity_for_tests.py  test_mocker.py  test_server.py
tests/activity/api/: test_endpoints.py
tests/atmospherex/: test_atmospherex_api.py
tests/custom_activity/: activity_for_tests.py  conftest.py  test_mocker.py  test_server.py
tests/transformer/: test_input_transformer_api.py  test_input_transformer_class.py  test_output_transformer_api.py  test_output_transformer_class.py  utils.py
(+6 files in other folders)
