[tool.poetry]
name = "atmosphere"
version = "v4.1.0"
description = "The atmosphere python SDK including multiple modules to help with setting up activities, transformers and more."
authors = ["Ambiata <atmosphere@ambiata.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
apscheduler = ">=3.10.1,<4.0.0"
fastapi = ">=0.95.0,<1.0.0"
httpx = ">=0.23.3,<1.0.0"
pyjwt = ">=2.6.0,<3.0.0"
pyyaml = ">=6.0,<7.0"
simplejson = ">=3.18.4,<4.0.0"
uvicorn = ">=0.21.1,<1.0.0"

[tool.poetry.group.dev.dependencies]
autoflake = "2.0.2"
autopep8 = "2.0.2"
black = "23.1.0"
coverage = "7.2.2"
httpretty = "1.1.4"
isort = "5.12.0"
mypy-extensions = "1.0.0"
pylint = "2.17.0"
pytest = "7.2.2"
pytest-cov = "4.0.0"
pytest-env = "0.8.1"
requests-mock = "1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
