[tool.poetry]
name = "atmosphere"
version = "v6.0.0"
description = "The atmosphere python SDK including multiple modules to help with setting up activities, transformers and more."
authors = ["Ambiata <atmosphere@ambiata.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
apscheduler = ">=3.10.1,<4.0.0"
fastapi = ">=0.115.2,<1.0.0"
httpx = ">=0.27.2,<1.0.0"
pyjwt = ">=2.9.0,<3.0.0"
pyyaml = ">=6.0.2,<7.0"
simplejson = ">=3.19.3,<4.0.0"
uvicorn = ">=0.32.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
autoflake = "2.3.1"
autopep8 = "2.3.1"
black = "24.10.0"
coverage = "7.6.4"
httpretty = "1.1.4"
isort = "5.13.2"
mypy-extensions = "1.0.0"
pylint = "3.3.1"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-env = "1.1.5"
requests-mock = "1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
