[tool.poetry]
name = "atmosphere"
version = "v6.0.1"
description = "The atmosphere python SDK including multiple modules to help with setting up activities, transformers and more."
authors = ["Ambiata <atmosphere@ambiata.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = ">=2.0,<3.0"
apscheduler = ">=3.10.1,<4.0.0"
fastapi = ">=0.115.8,<1.0.0"
httpx = ">=0.28.1,<1.0.0"
pyjwt = ">=2.10.1,<3.0.0"
pyyaml = ">=6.0.2,<7.0"
pytz = ">=2025.1"
simplejson = ">=3.20.1,<4.0.0"
uvicorn = ">=0.34.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
autoflake = ">=2.3.1,<3.0"
autopep8 = ">=2.3.2,<3.0"
black = ">=25.1.0,<26.0"
coverage = ">=7.6.12,<8.0"
httpretty = ">=1.1.4,<2.0"
isort = ">=6.0.0,<7.0"
mypy-extensions = ">=1.0.0,<2.0"
pylint = ">=3.3.4,<4.0"
pytest = ">=8.3.4,<9.0"
pytest-cov = ">=6.0.0,<7.0"
pytest-env = ">=1.1.5,<2.0"
requests-mock = ">=1.12.1,<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
